# django-jsonfield-backport

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: dist.yml  lint.yml  publish.yml  test.yml  test_mysql.yml  test_oracle.yml  test_postgres.yml  test_sqlite.yml
src/django_jsonfield_backport/: __init__.py  apps.py  features.py  forms.py  models.py
tests/: models.py  settings.py  test_deprecation.py  test_extend_features.py  test_form_field.py  test_invalid_models.py  test_jsonfield.py  test_model_field.py
tests/migrations/: 0001_initial.py
