[metadata]
name = django-jsonfield-backport
version = 0.1.0
description = Backport of the cross-DB JSONField from Django 3.1.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laymonage/django-jsonfield-backport
author = sage
author_email = laymonage@gmail.com
license = BSD
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
keywords = django jsonfield backport database models

[options]
packages = find:
package_dir = =src
install_requires =
    Django>2.2,<3.1
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max_line_length = 119
ignore = W503,W504

[isort]
skip = .tox,migrations,venv
atomic = true
line_length = 100
known_third_party = Django
known_first_party = django_jsonfield_backport

[coverage:run]
branch = true
source = django_jsonfield_backport
