[metadata]
name = django-jsonfield-backport
version = 1.0.3
description = Backport of the cross-DB JSONField model and form fields from Django 3.1.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/laymonage/django-jsonfield-backport
author = sage
author_email = laymonage@gmail.com
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords = django jsonfield json backport database models forms fields
platforms =
    any

[options]
packages = find:
package_dir = =src
install_requires =
    Django>=2.2
python_requires = >=3.5

[options.packages.find]
where = src

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:run]
branch = True
include = */django_jsonfield_backport/*
parallel = True

[coverage:report]
show_missing = True

[flake8]
exclude = .tox,venv
ignore = W503,W504
max_line_length = 99

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
known_third_party = Django
known_first_party = django_jsonfield_backport
line_length = 99
multi_line_output = 3
skip = .tox,venv
use_parentheses = True
